use appsettings flag to determine diagnostics service endpoint

--- a/ApplensBackend/appsettings.json
+++ b/ApplensBackend/appsettings.json
@@ -15,10 +15,16 @@
   "ApplicationInsights": {
     "InstrumentationKey": ""
   },
-  "DiagnosticRole": {
+  "DiagnosticsService": {
     "endpoint": "",
     "authCertThumbprint": "",
-    "isLocalDevelopment": ""
+    "isLocalDevelopment": "",
+    "UseRuntimeHost": "",
+    "RuntimeHostEndpoint":  "",
+    "ClientId": "",
+    "AppKey": "",
+    "AADAuthority": "",
+    "AADResource": ""
   },
   "Observer": {
     "clientId": "",
