--- a/ApplensBackend/appsettings.json
+++ b/ApplensBackend/appsettings.json
@@ -15,7 +15,7 @@
   "ApplicationInsights": {
     "InstrumentationKey": ""
   },
-  "DiagnosticsService": {
+  "DiagnosticService": {
     "endpoint": "",
     "authCertThumbprint": "",
     "isLocalDevelopment": "",
