Renamed appsettings back to DiagnosticRole

--- a/ApplensBackend/appsettings.json
+++ b/ApplensBackend/appsettings.json
@@ -15,12 +15,12 @@
   "ApplicationInsights": {
     "InstrumentationKey": ""
   },
-  "DiagnosticService": {
+  "DiagnosticRole": {
     "endpoint": "",
     "authCertThumbprint": "",
     "isLocalDevelopment": "",
-    "UseRuntimeHost": "",
-    "RuntimeHostEndpoint":  "",
+    "UseAppService": "",
+    "AppServiceEndpoint":  "",
     "ClientId": "",
     "AppKey": "",
     "AADAuthority": "",
