Config settings change for backend

--- a/ApplensBackend/appsettings.json
+++ b/ApplensBackend/appsettings.json
@@ -82,16 +82,14 @@
     "FreshChatBaseUri": "https://api.freshchat.com/v2",
     "UserAgentToFreshChat": "applensv3"
   },
-  "SecurityGroups": [
-    {
-      "GroupName": "ApplensAccess",
-      "GroupId": ""
-    },
-    {
-      "GroupName": "ApplensTesters",
-      "GroupId": ""
-    }
-  ],
+  "ApplensAccess": {
+    "GroupName": "ApplensAccess",
+    "GroupId": ""
+  },
+  "ApplensTesters": {
+    "GroupName": "ApplensTesters",
+    "GroupId": ""
+  },
   "ApplensAuthorization": {
     "ClientId": "",
     "ClientSecret": ""
