--- a/AngularApp/projects/app-service-diagnostics/src/armResourceConfig/microsoft.containerservice/managedclusters/config.json
+++ b/AngularApp/projects/app-service-diagnostics/src/armResourceConfig/microsoft.containerservice/managedclusters/config.json
@@ -17,7 +17,7 @@
             "description": "Is your cluster experiencing failures or unresponsiveness? Investigate and discover issues that may cause your cluster to no longer be manageable.",
             "keywords": [ "Failures", "Node Readiness", "Node Health", "Scaling", "CRUD", "Identity" ],
             "color": "rgb(186, 211, 245)",
-            "createFlowForCategory": false,
+            "createFlowForCategory": true,
             "chatEnabled": false
         }
     ]
